email verification process for client added email template - general use

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -56,6 +56,7 @@
     "/assets/js/pages/two-step-verification.init.js": "/assets/js/pages/two-step-verification.init.js",
     "/assets/js/pages/validation.init.js": "/assets/js/pages/validation.init.js",
     "/assets/js/pages/vector-maps.init.js": "/assets/js/pages/vector-maps.init.js",
+    "/assets/js/web.js": "/assets/js/web.js",
     "/assets/css/app-dark.css": "/assets/css/app-dark.css",
     "/assets/css/app.css": "/assets/css/app.css",
     "/assets/css/web.css": "/assets/css/web.css",
