page to view ads by all categories and locations page to view ads by selected category show selected location (city) and category on the page paginate results layouts of the ad listing pages

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -188,6 +188,8 @@
     "/assets/fonts/summernote.eot": "/assets/fonts/summernote.eot",
     "/assets/fonts/summernote.ttf": "/assets/fonts/summernote.ttf",
     "/assets/fonts/summernote.woff": "/assets/fonts/summernote.woff",
+    "/assets/images/QuickAds Logo.jpg": "/assets/images/QuickAds Logo.jpg",
+    "/assets/images/QuickAds Logo.png": "/assets/images/QuickAds Logo.png",
     "/assets/images/bg-auth-overlay.png": "/assets/images/bg-auth-overlay.png",
     "/assets/images/coming-soon.svg": "/assets/images/coming-soon.svg",
     "/assets/images/error-img.png": "/assets/images/error-img.png",
