--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYPAL_MODE=sandbox
-PAYPAL_SANDBOX_CLIENT_ID=
-PAYPAL_SANDBOX_CLIENT_SECRET=
+STRIPE_KEY=
+STRIPE_SECRET=
