--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "laravel/scout": "^9.3",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^7.100"
     },
     "require-dev": {
